# ChangeLog for dev-perl/Text-ChaSen
# Copyright 2000-2004 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-perl/Text-ChaSen/ChangeLog,v 1.4 2004/07/22 23:46:58 dholm Exp $

  23 Jul 2004; David Holm <dholm@gentoo.org> Text-ChaSen-1.03-r1.ebuild:
  Added to ~ppc.

*Text-ChaSen-1.03-r1 (22 Jul 2004)

  22 Jul 2004; MATSUU Takuto <matsuu@gentoo.org> +Text-ChaSen-1.03-r1.ebuild:
  Fixed unusable problem with >=app-text/achasen-2.3.0. Bug #50904.
  Fixed LICENSE. Bug #50902.

*Text-ChaSen-1.03 (21 Jun 2003)

  21 Jun 2003; YAMAKURA Makoto <yakina@gentoo.org> Text-ChaSen-1.03.ebuild,
  Manifest,ChangeLog,files/digest-Text-ChaSen-1.03:

  Initial import. Ebuild submitted by naoto @ GentooJP
