@@ -1,6 +1,6 @@
-MD5 513e8a45c63ba224e8f81c9b2e1184e3 ChangeLog 733
+MD5 02c12bae4bd237c5e7ba0e20c1102ecc Text-ChaSen-1.03-r1.ebuild 712
 MD5 b18ee782e0873562e3ecb1ba3d10406a Text-ChaSen-1.03.ebuild 654
+MD5 69e011b70a9bc14c24755e2a8d0df36a ChangeLog 838
 MD5 f361e12b1c294f16004a07fa4e3b3246 metadata.xml 176
-MD5 d18f1197ee5723041c83d379367dcac3 Text-ChaSen-1.03-r1.ebuild 706
 MD5 74fcef12ba542f4ac99686511df858a1 files/digest-Text-ChaSen-1.03 135
 MD5 74fcef12ba542f4ac99686511df858a1 files/digest-Text-ChaSen-1.03-r1 135
