@@ -1,8 +1,8 @@
 # Copyright 1999-2004 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/dev-perl/Text-ChaSen/Text-ChaSen-1.03-r1.ebuild,v 1.2 2004/07/22 23:46:58 dholm Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-perl/Text-ChaSen/Text-ChaSen-1.03-r1.ebuild,v 1.3 2004/09/07 08:43:30 usata Exp $
 
-inherit perl-module
+inherit perl-module eutils
 
 DESCRIPTION="Chasen library module for Perl."
 SRC_URI="http://www.daionet.gr.jp/~knok/chasen/${P}.tar.gz
@@ -11,7 +11,7 @@ HOMEPAGE="http://www.daionet.gr.jp/~knok/chasen/"
 
 SLOT="0"
 LICENSE="chasen"
-KEYWORDS="~x86 ~amd64 ~ppc"
+KEYWORDS="x86 ~amd64 ~ppc"
 IUSE=""
 
 DEPEND=">=app-text/chasen-2.2.9"
