@@ -1,6 +1,9 @@
 # ChangeLog for dev-perl/Text-ChaSen
 # Copyright 2000-2004 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-perl/Text-ChaSen/ChangeLog,v 1.4 2004/07/22 23:46:58 dholm Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-perl/Text-ChaSen/ChangeLog,v 1.5 2004/09/07 08:43:30 usata Exp $
+
+  07 Sep 2004; Mamoru KOMACHI <usata@gentoo.org> Text-ChaSen-1.03-r1.ebuild:
+  Added eutils for epatch.
 
   23 Jul 2004; David Holm <dholm@gentoo.org> Text-ChaSen-1.03-r1.ebuild:
   Added to ~ppc.
